--- a/NFT-contract/Forc.toml
+++ b/NFT-contract/Forc.toml
@@ -2,7 +2,7 @@
 authors = ["Nikhil Bajaj"]
 entry = "main.sw"
 license = "Apache-2.0"
-name = "NFT-ontract"
+name = "NFT-contract"
 
 [dependencies]
 standards = { git = "https://github.com/FuelLabs/sway-standards", tag = "v0.4.3" }
