--- a/nft_fixed_price_swap_predicate/Cargo.toml
+++ b/nft_fixed_price_swap_predicate/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "nft_fixed_price_swap_predicate"
-description = "A cargo-generate template for Rust + Sway integration testing."
 version = "0.1.0"
 edition = "2021"
 authors = ["user"]
 license = "Apache-2.0"
 
-[dev-dependencies]
-fuels = "0.66.2"
+[dependencies]
+fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
+sha2 = { version = "0.10.7" }
 tokio = { version = "1.12", features = ["rt", "macros"] }
 
 [[test]]
