--- a/nft_fixed_price_swap_predicate/Cargo.toml
+++ b/nft_fixed_price_swap_predicate/Cargo.toml
@@ -6,9 +6,9 @@ authors = ["user"]
 license = "Apache-2.0"
 
 [dependencies]
-fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
 tokio = { version = "1.12", features = ["rt", "macros"] }
 sha2 = { version = "0.10.7" }
+fuels = "0.70.1"
 
 
 [[test]]
